Add base code for image handling

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ DB_USER=adoptame
 DB_PASSWORD=password
 DB_NAME=adoptame
 DB_PORT=5432
+
+# Images containers
+PRODUCTS_IMAGES_CONTAINER=products
+STORES_IMAGES_CONTAINER=stores
+STORAGE_PORT=10000
