--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 # Framework
-fastapi==0.105.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
-uvicorn==0.25.0
+fastapi~=0.105.0
+pydantic~=2.5.3
+pydantic-settings~=2.1.0
+uvicorn~=0.25.0
+python-multipart~=0.0.6
 
 # Database
 SQLAlchemy~=2.0.23
 alembic~=1.12.1
-asyncpg==0.29.0
-sqlmodel==0.0.14
+asyncpg~=0.29.0
+sqlmodel~=0.0.14
+
+# Utilities
+azure-storage-blob~=12.19.0
+aiohttp~=3.9.1
+cffi~=1.16.0
 
 # These requirements are only required for development, not for production:
 
@@ -16,14 +22,15 @@ sqlmodel==0.0.14
 coverage~=7.3.2
 pytest-cov~=4.1.0
 pytest~=7.4.3
-pytest-asyncio==0.21.1
-httpx==0.25.1
+pytest-asyncio~=0.21.1
+httpx~=0.25.1
 aiounittest~=1.4.2
-aiosqlite==0.19.0
-polyfactory==2.12.0
+aiosqlite~=0.19.0
+polyfactory~=2.12.0
+testcontainers[azurite]~=3.7.1
 
 # Linters
-pylint==3.0.2
-flake8==6.1.0
-mypy==1.7.1
-types-PyYAML==6.0.12.12
+pylint~=3.0.2
+flake8~=6.1.0
+mypy~=1.7.1
+types-PyYAML~=6.0.12.12
