--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 # Framework
 fastapi~=0.105.0
 pydantic~=2.5.3
+pydantic-extra-types==2.2.0
 pydantic-settings~=2.1.0
 uvicorn~=0.25.0
 python-multipart~=0.0.6
+pycountry~=23.12.11
 
 # Database
 SQLAlchemy~=2.0.23
