--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Docker starts successfully
         run: docker-compose up --build -d
 
+      - name: Check docker ps
+        run: docker ps
+
       - name: Run linters
         run: docker exec $CONTAINER_NAME sh scripts/linters.sh
 
