--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -6,12 +6,16 @@ on:
       - dev
       - main
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     env:
-      CONTAINER_NAME: "petfriend-services-service_api_1"
+      CONTAINER_NAME: "petfriend-services-service-api-1"
 
     steps:
       - name: Checkout Repository
@@ -22,7 +26,7 @@ jobs:
           cp .env.example .env
 
       - name: Docker starts successfully
-        run: docker-compose up --build -d
+        run: docker compose up --build -d
 
       - name: Run linters
         run: docker exec $CONTAINER_NAME sh scripts/linters.sh
@@ -34,4 +38,4 @@ jobs:
         run: docker exec $CONTAINER_NAME sh scripts/make_migrations.sh
 
       - name: Stop Docker Compose
-        run: docker-compose down -v
+        run: docker compose down -v
