Add authentication to all routes but the healthcheck

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ DB_PORT=5432
 PRODUCTS_IMAGES_CONTAINER=products
 STORES_IMAGES_CONTAINER=stores
 STORAGE_PORT=10000
+
+# Other services
+USERS_SERVICE_URL=https://users-dev.petfriend.delu.ar
