--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       STORAGE_CONNECTION_STRING: DefaultEndpointsProtocol=http;AccountName=acc;AccountKey=key1;BlobEndpoint=http://azurite:${STORAGE_PORT}/acc;
       STORES_IMAGES_CONTAINER: ${STORES_IMAGES_CONTAINER}
       PRODUCTS_IMAGES_CONTAINER: ${PRODUCTS_IMAGES_CONTAINER}
+      USERS_SERVICE_URL: ${USERS_SERVICE_URL}
     depends_on:
       database:
         condition: service_healthy
