--- a/requirements.txt
+++ b/requirements.txt
@@ -25,11 +25,12 @@ coverage~=7.3.2
 pytest-cov~=4.1.0
 pytest~=7.4.3
 pytest-asyncio~=0.21.1
-httpx~=0.25.1
+httpx~=0.27.0
 aiounittest~=1.4.2
 aiosqlite~=0.19.0
 polyfactory~=2.12.0
 testcontainers[azurite]~=3.7.1
+pytest-httpx~=0.30.0
 
 # Linters
 pylint~=3.0.2
