--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,10 @@ filterwarnings = [
     "ignore::DeprecationWarning:pydantic_core.*:",
     "ignore::DeprecationWarning:azure.*:",
 ]
-markers = ["noauth: fail authentication on e2e tests"]
+markers = [
+    "noauth: fail authentication on e2e tests",
+    "invalidaddress: fail address validation on e2e tests",
+]
 
 [tool.coverage.run]
 omit = [
