--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,6 @@ SQLAlchemy~=2.0.23
 alembic~=1.12.1
 asyncpg~=0.29.0
 sqlmodel~=0.0.14
-
 # Utilities
 azure-storage-blob~=12.19.0
 aiohttp~=3.9.1
@@ -37,3 +36,4 @@ pylint~=3.0.2
 flake8~=6.1.0
 mypy~=1.7.1
 types-PyYAML~=6.0.12.12
+importlib-metadata 
