--- a/.env.example
+++ b/.env.example
@@ -16,4 +16,5 @@ STORAGE_PORT=10000
 
 # Other services
 USERS_SERVICE_URL=https://users-dev.petfriend.delu.ar
+PAYMENTS_SERVICE_URL=https://payments-dev.petfriend.delu.ar
 GOOGLE_MAPS_API_KEY=api-key
