--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       STORES_IMAGES_CONTAINER: ${STORES_IMAGES_CONTAINER}
       PRODUCTS_IMAGES_CONTAINER: ${PRODUCTS_IMAGES_CONTAINER}
       USERS_SERVICE_URL: ${USERS_SERVICE_URL}
+      PAYMENTS_SERVICE_URL: ${PAYMENTS_SERVICE_URL}
       GOOGLE_MAPS_API_KEY: ${GOOGLE_MAPS_API_KEY}
     depends_on:
       database:
@@ -24,7 +25,7 @@ services:
     volumes:
       - ./:/app
       - /var/run/docker.sock:/var/run/docker.sock # Docker in docker for tests
-
+  
   database:
     container_name: ${DB_CONTAINER_NAME}
     image: postgres:latest
