Update dependencies, add PUT to update store purchases

--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,5 @@ STORAGE_PORT=10000
 # Other services
 USERS_SERVICE_URL=https://users-dev.petfriend.delu.ar
 PAYMENTS_SERVICE_URL=https://payments-dev.petfriend.delu.ar
+PAYMENTS_API_KEY=api-key
 GOOGLE_MAPS_API_KEY=api-key
