--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,14 +36,22 @@ exclude = [
     'app\/dev_volumes',
 ]
 mypy_path = '.'
-check_untyped_defs = true
 python_version = '3.12'
+check_untyped_defs = true
 disallow_untyped_defs = true
 disallow_any_generics = true
 implicit_reexport = false
 namespace_packages = true
 explicit_package_bases = true
+local_partial_types = true
+warn_redundant_casts = true
+warn_unused_ignores = true
 plugins = ['pydantic.mypy']
+
+[tool.pydantic-mypy]
+init_forbid_extra = true
+init_typed = true
+warn_required_dynamic_aliases = true
 
 [tool.pytest.ini_options]
 minversion = '6.0'
