--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,39 @@
 # Framework
-fastapi~=0.105.0
-pydantic~=2.5.3
-pydantic-extra-types==2.2.0
-pydantic-settings~=2.1.0
-uvicorn~=0.25.0
-python-multipart~=0.0.6
+fastapi~=0.110.0
+pydantic~=2.6.4
+pydantic-extra-types~=2.6.0
+pydantic-settings~=2.2.1
+uvicorn~=0.29.0
+python-multipart~=0.0.9
 pycountry~=23.12.11
 
 # Database
-SQLAlchemy~=2.0.23
-alembic~=1.12.1
+SQLAlchemy~=2.0.29
+alembic~=1.13.1
 asyncpg~=0.29.0
-sqlmodel~=0.0.14
+sqlmodel~=0.0.16
 
 # Utilities
-azure-storage-blob~=12.19.0
-aiohttp~=3.9.1
+azure-storage-blob~=12.19.1
 cffi~=1.16.0
+aiohttp~=3.9.3
+httpx~=0.27.0
 
 # These requirements are only required for development, not for production:
 
 # Testing
-coverage~=7.3.2
-pytest-cov~=4.1.0
-pytest~=7.4.3
-pytest-asyncio~=0.21.1
-httpx~=0.27.0
+coverage~=7.4.4
+pytest-cov~=5.0.0
+pytest~=8.1.1
+pytest-asyncio~=0.23.6
 aiounittest~=1.4.2
-aiosqlite~=0.19.0
-polyfactory~=2.12.0
-testcontainers[azurite]~=3.7.1
+aiosqlite~=0.20.0
+polyfactory~=2.15.0
+testcontainers[azurite]~=4.2.0
 pytest-httpx~=0.30.0
 
 # Linters
-pylint~=3.0.2
-flake8~=6.1.0
-mypy~=1.7.1
-types-PyYAML~=6.0.12.12
+pylint~=3.1.0
+flake8~=7.0.0
+mypy~=1.9.0
 black~=24.3.0
-importlib-metadata 
