--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ azure-storage-blob~=12.19.1
 cffi~=1.16.0
 aiohttp~=3.9.3
 httpx~=0.27.0
+filetype~=1.2.0
 
 # These requirements are only required for development, not for production:
 
