Add service images

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ DB_PORT=5432
 # Images containers
 PRODUCTS_IMAGES_CONTAINER=products
 STORES_IMAGES_CONTAINER=stores
+SERVICES_IMAGES_CONTAINER=services
 STORAGE_PORT=10000
 
 # Other services
