--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       STORAGE_CONNECTION_STRING: DefaultEndpointsProtocol=http;AccountName=acc;AccountKey=key1;BlobEndpoint=http://azurite:${STORAGE_PORT}/acc;
       STORES_IMAGES_CONTAINER: ${STORES_IMAGES_CONTAINER}
       PRODUCTS_IMAGES_CONTAINER: ${PRODUCTS_IMAGES_CONTAINER}
+      SERVICES_IMAGES_CONTAINER: ${SERVICES_IMAGES_CONTAINER}
       USERS_SERVICE_URL: ${USERS_SERVICE_URL}
       PAYMENTS_SERVICE_URL: ${PAYMENTS_SERVICE_URL}
       PAYMENTS_API_KEY: ${PAYMENTS_API_KEY}
