--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ aiosqlite~=0.20.0
 polyfactory~=2.15.0
 testcontainers[azurite]~=3.7.1
 pytest-httpx~=0.30.0
+pytest-xdist~=3.5.0
 
 # Linters
 pylint~=3.1.0
