--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ cffi~=1.16.0
 aiohttp~=3.9.3
 httpx~=0.27.0
 filetype~=1.2.0
+intervaltree~=3.1.0
 
 # These requirements are only required for development, not for production:
 
