--- a/.env.example
+++ b/.env.example
@@ -18,5 +18,6 @@ STORAGE_PORT=10000
 # Other services
 USERS_SERVICE_URL=https://users-dev.petfriend.delu.ar
 PAYMENTS_SERVICE_URL=https://payments-dev.petfriend.delu.ar
+ANIMALS_SERVICE_URL=https://animals-dev.petfriend.delu.ar
 PAYMENTS_API_KEY=api-key
 GOOGLE_MAPS_API_KEY=api-key
