--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       PRODUCTS_IMAGES_CONTAINER: ${PRODUCTS_IMAGES_CONTAINER}
       SERVICES_IMAGES_CONTAINER: ${SERVICES_IMAGES_CONTAINER}
       USERS_SERVICE_URL: ${USERS_SERVICE_URL}
+      NOTIFICATIONS_API_KEY: ${NOTIFICATIONS_API_KEY}
       ANIMALS_SERVICE_URL: ${ANIMALS_SERVICE_URL}
       PAYMENTS_SERVICE_URL: ${PAYMENTS_SERVICE_URL}
       PAYMENTS_API_KEY: ${PAYMENTS_API_KEY}
